--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.7",
+    "@mui/x-tree-view": "^7.22.1",
     "@react-oauth/google": "^0.12.1",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
